@@ -2,6 +2,9 @@ $Id$
 
 2016-10-23  Christian Franke  <franke@computer.org>
 
+	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe sections
+	for NetBSD.
+
 	configure.ac, os_netbsd.cpp: Add --with-nvme-devicescan for NetBSD.
 
 	drivedb.h:
